@@ -12,7 +12,11 @@ local DISABLED_FONT_COLOR = DISABLED_FONT_COLOR
 
 local ChangeLogData = {
 	"Changes:",
-		"• Patch 10.1 fixes",
+		"• Fix the display from the ItemLevel in bags",
+		"• Fix WeakAura skin. Credits: fang2hou",
+		"• Add some new profession items & reward bags on AutoButtons",
+		"• Sort favorties by alphabetic order on the Mail List",
+		"• Fixed an issue with brackets on the chat text",
 
 		" ",
 
