@@ -1,4 +1,7 @@
 ### Changes ###
 
-  * Patch 10.1 fixes
-
+  * Fix the display from the ItemLevel in bags
+  * Fix WeakAura skin. Credits: fang2hou
+  * Add some new profession items & reward bags on AutoButtons
+  * Sort favorties by alphabetic order on the Mail List
+  * Fixed an issue with brackets on the chat text
